2008-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i, example/swig/CMakeLists.txt, 
	example/swig/compat.h, example/swig/example.lisp: patch from
	Lorenz Mosenlechner for Allegro Lisp bindings.

2008-07-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/yarp_without_yarp.dox: tutorial on communicating
	with YARP Ports without actually using YARP.

	* src/doc/name_server.dox: update the name server documentation.

	* src/doc/using_cmake.dox: add a more extensive cmake tutorial.

2008-07-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/dox_header.html: bring back search box in online
	documentation

2008-07-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: froze version 2.2.1

2008-07-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/ffmpeg/ffmpeg_api.cpp: fixed bug remapping formats
	using newer ffmpeg libraries, oops.

2008-07-02  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/cuda/CUDADeviceDriver.cpp: Little modification to 
	add CUDA 2.0 (beta) compatibility.

2008-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Terminator.cpp: Terminators are strange
	entities.  They tell the name server that they are ports, but
	don't obey any port protocols. they accept the string "quit", and
	that is all.  I've now changed them to also accept "CONNECT
	foo\nd\nquit\n" in preparation for replacing them with real ports
	in a later version of YARP.

	* src/libYARP_OS/src/ResourceFinder.cpp: basic implementation
	of policy for finding configuration files.

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: stub for 
	tool for helping find configuration files.

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h: 
	adding missing copyright/license statement.

2008-06-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/NetTypeTest.cpp: add regression
	test for NetInt16.

	* src/libYARP_sig/src/ImageCopy.cpp: set up mapping from