@@ -1,3 +1,9 @@
+2008-07-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Property.cpp: when reading config
+	files, accept a final line without a linefeed/newline at 
+	the end of it (previously such lines were ignored)
+
 2008-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* example/swig/yarp.i, example/swig/CMakeLists.txt, 
